# rk3588_yolo11_detection

./: .gitignore  README.md  build_linux_rk.sh  build_linux_rk3588.sh  config.json  config.json.example  config.json.usb  manual_developers.md  manual_users.md  performance.sh
rtspMulitPlayer/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cc
src/app/: app_controller.cc  app_controller.cpp  app_controller.h  app_core_types.h  app_types.h  main.cpp
src/app/config/: app_config.cc  app_config.h
src/app/log/: app_log.cc  app_log.h
src/app/modes/: app_modes.h  fps_tracker.h  mode_camera.cc  mode_image.cc  mode_rtsp.cc  mode_video.cc
src/app/pipeline/: frame_pipeline.cc  frame_pipeline.h
src/app/runtime/: video_camera_runtime.cc  video_camera_runtime.h
src/app/utils/: app_utils.cc  app_utils.h
src/app/worker/: app_worker.cc  app_worker.h  worker_pool.cc  worker_pool.h
src/core/log/: app_log.cc  app_log.h
src/core/pipeline/: frame_pipeline.cc  frame_pipeline.h
src/core/pool/: infer_worker.cc  infer_worker.h  worker_pool.cc  worker_pool.h
src/core/queue/: result_queue.cc  result_queue.h
src/core/types/: app_core_types.h  app_types.h  common.h  fps_tracker.h  frame_types.h  infer_types.h  preprocess_types.h  runtime_types.h  source_types.h  vision_types.h
src/core/utils/: rga_debug_gate.cc  rga_debug_gate.h  string_utils.h
src/modules/compositor/: analyzer.cpp  analyzer.h  grid_compositor.cc  grid_compositor.cpp  grid_compositor.h
src/modules/decode/: decode_node.cc  decode_node.h
src/modules/display/: display.cc  display.cpp  display.h  display_node.cc  display_node.h
src/modules/inference/: infer_context.cc  infer_context.h  infer_node.cc  infer_node.h  infer_worker.cc  infer_worker.h
src/modules/postprocess/: postprocess_node.cc  postprocess_node.h
src/modules/preprocess/: image_preprocess_utils.cc  image_preprocess_utils.h  image_utils.c  image_utils.h  preprocess_node.cc  preprocess_node.h
src/modules/source/: capturer.cc  decChannel.cc  decChannel.cpp  decChannel.h  file_source.cc  file_source.h  mipi_source.cc  mipi_source.h  rtsp_source.cc  rtsp_source.h  source_base.h  source_factory.cc  source_factory.h  source_frame.h  usb_cam_source.cc  usb_cam_source.h
src/postprocess/: postprocess.cc  postprocess.h
src/rknpu2/: yolo11.cc  yolo11.h  yolo11_zero_copy.cc
src/tests/: test_app_config.cc
src/tools/: check_module_boundaries.sh
src/v4l2_camera/: v4l2_camera.cpp  v4l2_camera.h
utils/: CMakeLists.txt  file_utils.c  image_drawing.c  image_utils.c
